--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -80,7 +80,7 @@
     }
 
     .filter-container ul {
-        width: 70vw;
+        width: 320px;
     }
 }
 
